--- a/app.css
+++ b/app.css
@@ -5,6 +5,14 @@ html {
   padding: 0;
 }
 
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+html {
+  height: -webkit-fill-available;
+}
+
 @media screen and (min-width: 992px) {
   body {
     overflow: hidden;
