--- a/app.css
+++ b/app.css
@@ -2425,8 +2425,8 @@ width: 8px!important;
 /*  .img_container {
   max-height: 13.5em!important; */
 
-} 
-
+/* } 
+ */
 
 /*
 ================================================================================
