--- a/app.css
+++ b/app.css
@@ -925,9 +925,9 @@ user-select:none;
 }
 
 
-.slideshow__item img {
+/* .slideshow__item img {
   width: 100%;
-}
+} */
 
 /*
 ================================================================================
