--- a/app.css
+++ b/app.css
@@ -936,7 +936,7 @@ VIDEO PREVIEW CSS
 ================================================================================
 */
 
-
+/*
 .filepond--media-preview audio {
   display: none;
 }
@@ -1027,7 +1027,7 @@ VIDEO PREVIEW CSS
   margin-top: 0.19em!important;
 }
 
-
+*/
 
 
 
