--- a/app.css
+++ b/app.css
@@ -723,212 +723,8 @@ TEST YOUR DESIGN ///
 ================================================================================
 */
 
-  .filepond--credits {
-    display: none;
-  }
-
-  /* image uploader */
-  .photo-crop-container {
-    position: relative;
-  }
-
-  .photo-crop-container:before {
-    content: '';
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: absolute;
-    height: 0px;
-    width: 100%;
-    z-index: 9;
-    background-color: transparent;
-    vertical-align: middle;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    opacity: 0;
-    top: 80px;
-    -webkit-transition: all linear 0.3s 0.1s;
-    -o-transition: all linear 0.3s 0.1s;
-    transition: all linear 0.3s 0.1s;
-  }
-
-  .photo-crop-container.show-loader:before {
-    content: 'Cropping ';
-    opacity: 1;
-    background-color: transparent;
-    height: calc(100% - 80px);
-  }
-
-  .photo-crop-container {
-    position: relative;
-    overflow: hidden;
-  }
-
-  .photo-crop-container img {
-    display: block;
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
-  }
-
-  .photo-crop-container .crop-preview-cont {
-    overflow: hidden;
-    -webkit-transition: all linear 0.2s;
-    -o-transition: all linear 0.2s;
-    transition: all linear 0.2s;
-    -webkit-transform: translateY(0%);
-    -ms-transform: translateY(0%);
-    transform: translateY(0%);
-    opacity: 1;
-    height: 100%;
-    display: none;
-  }
-
-  .photo-crop-container .crop-preview-cont #crop_img {
-    position: absolute;
-    bottom: 0;
-    z-index: 1;
-    color: #FFFCF0;
-    text-decoration: underline;
-    right: 0;
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.30196078431372547);
-    padding: 2px 10px;
-}
-
-/* OVO JE UGAŠENO!!!!!*/
-   /* .photo-crop-container .crop-preview-cont #crop_img {
-    position: absolute;
-    bottom: 0.52em;
-    width: 2.5em;
-    height: 2.5em;
-    z-index: 1;
-    font-size: 0.7em;
-    color: var(--frkayellow)!important;
-    text-decoration: none;
-    right: 2em;
-    cursor: pointer;
-    background-color: var(--frkablack)!important;
-    padding-top: 0.3em;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  } */
-
-  .photo-crop-container.show-result .crop-preview-cont .img_container {
-    max-width: 400px;
-  }
-
-  .photo-crop-container.show-result .crop-preview-cont {
-    -webkit-transform: translateY(10%);
-    -ms-transform: translateY(10%);
-    transform: translateY(10%);
-    opacity: 0;
-    height: 0;
-  }
-
-  .photo-crop-container #user_cropped_img {
-    -webkit-transition: all linear 0.2s 2s;
-    -o-transition: all linear 0.2s 2s;
-    transition: all linear 0.2s 2s;
-    -webkit-transform: translateY(-10%);
-    -ms-transform: translateY(-10%);
-    transform: translateY(-10%);
-    opacity: 0;
-    position: absolute;
-  }
-
-  .photo-crop-container.show-result #user_cropped_img {
-    -webkit-transform: translateY(0%);
-    -ms-transform: translateY(0%);
-    transform: translateY(0%);
-    opacity: 1;
-    position: relative;
-  }
-
-  .photo-crop-container #user_cropped_img img {
-    max-width: 300px;
-}
-
-  /**/
-/*   .photo-crop-container #user_cropped_img img {
-    width: 100%!important;
-  }
-
-  #mobile #slideshow #user_cropped_img img {
-    width: 100%!important;
-  } */
-/**/
-  .photo-crop-container #user_cropped_img img {
-    -webkit-transition: all cubic-bezier(0.22, 0.61, 0.36, 1) 0.2s 2.3s;
-    -o-transition: all cubic-bezier(0.22, 0.61, 0.36, 1) 0.2s 2.3s;
-    transition: all cubic-bezier(0.22, 0.61, 0.36, 1) 0.2s 2.3s;
-    -webkit-transform: translateY(-10%);
-    -ms-transform: translateY(-10%);
-    transform: translateY(-10%);
-    opacity: 0;
-   scroll-behavior: smooth; 
-  }
-
-  .photo-crop-container.show-result #user_cropped_img img {
-    -webkit-transform: translateY(0%);
-    -ms-transform: translateY(0%);
-    transform: translateY(0%);
-    opacity: 1;
-  }
-
-  @media only screen and (max-width: 575px) {
-    .photo-crop-container #user_cropped_img img {
-      max-width: 100%;
-    }
-  }
 
 
-/*
-================================================================================
-FILEPOND STYLING
-================================================================================
-*/
-
-.crop-para {
-margin-bottom: 2em;
-}
-
-.vert {
-  height: 100%;
-}
-
-.hor {
-  width: 100%;
-}
-
-
-
-.vizsim-txt, .close-x-icon {
-user-select:none;
-}
-
-
-.filepond--root {
-  font-size: 1.04em!important;
-  font-family: Hkspec, sans-serif!important;
-
-}
-
-.filepond--drop-label.filepond--drop-label label {
-  padding: 1.75em 0.5em 0.5em 0.5em!important;
-  width: 100%!important;
-}
-
-
-.slideshow__item img {
-  width: 100%;
-}
 
 /*
 ================================================================================
@@ -1047,9 +843,6 @@ PRINTTHIS PLUGIN STYLING
 ================================================================================
 */
 
-.butonio.hide {
-  opacity: 1;  
-}
 
 
 /*
@@ -1116,7 +909,7 @@ VIZUAL SIMULATOR CSS
 } */
 
 
-.wrap {
+/* .wrap {
   position: relative;
   display: block;
   width: 100%;
@@ -1126,35 +919,15 @@ VIZUAL SIMULATOR CSS
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
-}
-
-.mockup__img {
-  display: block;
-  width: 1920px;
-  max-width: none;
-}
-
-.filepond-css {
-   font-size: 1.04em; 
-   cursor: pointer;
- }
- 
+} */
 
 
 
 
 
 
-/* BOTUNI VIDEO UPLOAD*/
 
-.movevideo.hide {
-  display:none;
-}
-.pdf.butonio {
-position: relative;
-top: -0.5em;
-display: inline-block;
-}
+
 
 
 /*
