--- a/app-webflow-test1.css
+++ b/app-webflow-test1.css
@@ -757,7 +757,7 @@ TEST YOUR DESIGN
   }
   
   .photo-crop-container.show-loader:before {
-      content: 'Cropping...';
+      content: 'CropKROPPP';
       opacity: 1;
       height: calc(100% - 80px);
   }
