--- a/app-webflow-test1.css
+++ b/app-webflow-test1.css
@@ -723,6 +723,140 @@ TEST YOUR DESIGN
 ================================================================================
 */
 
+.filepond--credits {
+  display:none;
+  }
+  
+  /* image uploader */
+  .photo-crop-container {
+      position: relative;
+  }
+  
+  .photo-crop-container:before {
+      content: '';
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      position: absolute;
+      height: 0px;
+      width: 100%;
+      z-index: 9;
+      background-color: #f5f5f5;
+      vertical-align: middle;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      opacity: 0;
+      top: 80px;
+      -webkit-transition: all linear 0.3s 0.1s;
+      -o-transition: all linear 0.3s 0.1s;
+      transition: all linear 0.3s 0.1s;
+  }
+  
+  .photo-crop-container.show-loader:before {
+      content: 'CropKROPPY';
+      opacity: 1;
+      height: calc(100% - 80px);
+  }
+  
+  .photo-crop-container {
+      position: relative;
+      overflow: hidden;
+  }
+  
+  .photo-crop-container img {
+      display: block;
+      max-width: 100%;
+      width: 100%;
+      height: 100%;
+  }
+  
+  .photo-crop-container .crop-preview-cont {
+      overflow: hidden;
+      -webkit-transition: all linear 0.2s;
+      -o-transition: all linear 0.2s;
+      transition: all linear 0.2s;
+      -webkit-transform: translateY(0%);
+      -ms-transform: translateY(0%);
+      transform: translateY(0%);
+      opacity: 1;
+      height: 100%;
+      display: none;
+  }
+  
+  .photo-crop-container .crop-preview-cont #crop_img {
+      position: absolute;
+      bottom: 0;
+      z-index: 1;
+      color: #fff;
+      text-decoration: underline;
+      right: 0;
+      cursor: pointer;
+      background-color: rgba(0, 0, 0, 0.30196078431372547);
+      padding: 2px 10px;
+  }
+  
+  .photo-crop-container.show-result .crop-preview-cont .img_container {
+      max-width: 400px;
+  }
+  
+  .photo-crop-container.show-result .crop-preview-cont {
+      -webkit-transform: translateY(10%);
+      -ms-transform: translateY(10%);
+      transform: translateY(10%);
+      opacity: 0;
+      height: 0;
+  }
+  
+  .photo-crop-container #user_cropped_img {
+      -webkit-transition: all linear 0.2s 2s;
+      -o-transition: all linear 0.2s 2s;
+      transition: all linear 0.2s 2s;
+      -webkit-transform: translateY(-10%);
+      -ms-transform: translateY(-10%);
+      transform: translateY(-10%);
+      opacity: 0;
+      position: absolute;
+  }
+  
+  .photo-crop-container.show-result #user_cropped_img {
+      -webkit-transform: translateY(0%);
+      -ms-transform: translateY(0%);
+      transform: translateY(0%);
+      opacity: 1;
+      position: relative;
+  }
+  
+  .photo-crop-container #user_cropped_img img {
+      max-width: 300px;
+  }
+  
+  .photo-crop-container #user_cropped_img img {
+      -webkit-transition: all cubic-bezier(0.22, 0.61, 0.36, 1) 0.2s 2.3s;
+      -o-transition: all cubic-bezier(0.22, 0.61, 0.36, 1) 0.2s 2.3s;
+      transition: all cubic-bezier(0.22, 0.61, 0.36, 1) 0.2s 2.3s;
+      -webkit-transform: translateY(-10%);
+      -ms-transform: translateY(-10%);
+      transform: translateY(-10%);
+      opacity: 0;
+      scroll-behavior: smooth;
+  }
+  
+  .photo-crop-container.show-result #user_cropped_img img {
+      -webkit-transform: translateY(0%);
+      -ms-transform: translateY(0%);
+      transform: translateY(0%);
+      opacity: 1;
+  }
+  
+  @media only screen and (max-width: 575px) {
+      .photo-crop-container #user_cropped_img img {
+          max-width: 100%;
+      }
+  }
 
 
 /*
@@ -944,6 +1078,57 @@ TIMOTHY BUTTONS
 VIZUAL SIMULATOR CSS
 ================================================================================
 */
+
+.wrap {
+	margin: 0 auto;
+	width: 100%;
+	height: 0;
+	padding-top: 58%; /* ratio of image * 100 */
+	overflow: hidden;
+	position: relative;
+}
+
+.mockup {
+	position: absolute;
+	top: 0;
+	-webkit-transform-origin: 0 0;
+	transform-origin: 0 0;
+}
+
+.mockup::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+}
+
+.mobile {
+	overflow: hidden;
+	position: absolute;
+	z-index: 100;
+	outline: 1px solid transparent;
+	-webkit-transform-origin: 0 0 0;
+	transform-origin: 0 0 0;
+	-webkit-transform:matrix3d(1.12003, -0.296489, 0, -0.000663239, -0.0209571, 1.47574, 0, -5.50055e-05, 0, 0, 1, 0, 79, 49, 0, 1);
+
+	transform:matrix3d(1.12003, -0.296489, 0, -0.000663239, -0.0209571, 1.47574, 0, -5.50055e-05, 0, 0, 1, 0, 79, 49, 0, 1)
+
+}
+
+
+/* BOTUNI VIDEO UPLOAD*/
+
+.movevideo.hide {
+  display:none;
+}
+.pdf.butonio {
+position: relative;
+top: -0.5em;
+display: inline-block;
+}
 
 
 /*
