--- a/app.css
+++ b/app.css
@@ -142,455 +142,7 @@ DISABLE MOBILE LANDSCAPE
 } */
 
  
-/* COOKIES*/
-
-.w-checkbox {
-  display: block;
-  margin-bottom: 5px;
-  padding-left: 20px;
-}
-
-.w-checkbox::before {
-  content: ' ';
-  display: table;
-  -ms-grid-column-span: 1;
-  grid-column-end: 2;
-  -ms-grid-column: 1;
-  grid-column-start: 1;
-  -ms-grid-row-span: 1;
-  grid-row-end: 2;
-  -ms-grid-row: 1;
-  grid-row-start: 1;
-}
-
-.w-checkbox::after {
-  content: ' ';
-  display: table;
-  -ms-grid-column-span: 1;
-  grid-column-end: 2;
-  -ms-grid-column: 1;
-  grid-column-start: 1;
-  -ms-grid-row-span: 1;
-  grid-row-end: 2;
-  -ms-grid-row: 1;
-  grid-row-start: 1;
-  clear: both;
-}
-
-.w-checkbox-input {
-  float: left;
-  margin-bottom: 0px;
-  margin-left: -20px;
-  margin-right: 0px;
-  margin-top: 4px;
-  line-height: normal;
-}
-
-.w-checkbox-input--inputType-custom {
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-  border-left-width: 1px;
-  border-right-width: 1px;
-  border-top-color: #ccc;
-  border-bottom-color: #ccc;
-  border-left-color: #ccc;
-  border-right-color: #ccc;
-  border-top-style: solid;
-  border-bottom-style: solid;
-  border-left-style: solid;
-  border-right-style: solid;
-  width: 12px;
-  height: 12px;
-  border-bottom-left-radius: 2px;
-  border-bottom-right-radius: 2px;
-  border-top-left-radius: 2px;
-  border-top-right-radius: 2px;
-}
-
-.w-checkbox-input--inputType-custom.w--redirected-checked {
-  background-color: #3898ec;
-  border-top-color: #3898ec;
-  border-bottom-color: #3898ec;
-  border-left-color: #3898ec;
-  border-right-color: #3898ec;
-  background-image: url('https://d3e54v103j8qbb.cloudfront.net/static/custom-checkbox-checkmark.589d534424.svg');
-  background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.w-checkbox-input--inputType-custom.w--redirected-focus {
-  box-shadow: 0px 0px 3px 1px #3898ec;
-}
-
-
-
-.fs-cc-prefs2_form {
-  position: relative;
-  width: 100%;
-  max-height: 85vh;
-  max-width: 400px;
-  margin-bottom: 0px;
-  color: #fff;
-}
-
-.fs-cc-banner2_text {
-  color: #ffdc52;
-  font-size: 0.78em;
-}
-
-.fs-cc-banner2_button {
-  min-width: 8.5em;
-  margin-right: 8px;
-  margin-left: 8px;
-  padding: 0.5em 2em 0.3em;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  border-radius: 100vw;
-  background-color: #ffdc52;
-  color: #231f20;
-  font-size: 1.04em;
-  font-weight: 400;
-  text-align: center;
-  text-transform: none;
-}
-
-.fs-cc-banner2_button.fs-cc-button-alt {
-  margin-right: 0.5em;
-  margin-left: 0px;
-  padding: 0.5em 2em 0.3em;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #ffdc52;
-  border-radius: 100vw;
-  background-color: transparent;
-  color: #ffdc52;
-  font-size: 1.04em;
-  text-transform: none;
-}
-
-.fs-cc-prefs2_submit {
-  margin-top: 1em;
-  padding: 1em;
-  border-radius: 100vw;
-  background-color: #fffcf0;
-  color: #231f20;
-  font-size: 1.04em;
-  font-weight: 400;
-  text-align: center;
-}
-
-.fs-cc-prefs2_component {
-  position: fixed;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  z-index: 997;
-  display: none;
-  margin-bottom: 0px;
-  padding: 2em;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  opacity: 1;
-}
-
-.fs-cc-prefs2_option {
-  padding-top: 1.2em;
-  padding-bottom: 1.2em;
-  border-bottom: 1px solid hsla(0, 0%, 75.3%, 0.3);
-}
-
-.fs-cc-banner2_container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  max-width: 990px;
-  margin-right: auto;
-  margin-left: auto;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-}
-
-.fs-cc-prefs2_buttons-wrapper {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 1em;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: end;
-  -webkit-justify-content: flex-end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  grid-auto-columns: 1fr;
-  -ms-grid-columns: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: auto;
-  grid-template-rows: auto;
-}
-
-.fs-cc-prefs2_overlay {
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(35, 31, 32, 0.9);
-}
-
-.fs-cc-banner2_component {
-  position: fixed;
-  left: auto;
-  top: auto;
-  right: 0%;
-  bottom: 0%;
-  z-index: 5;
-  display: block;
-  width: 23.44em;
-  padding: 1.56em;
-  background-color: #231f20;
-  color: #fff;
-}
-
-.fs-cc-prefs2_checkbox-field {
-  position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  width: 20px;
-  height: 20px;
-  margin-bottom: 0px;
-  padding: 2px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.fs-cc-prefs2_space-small {
-  margin-bottom: 1em;
-}
-
-.fs-cc-prefs2_content {
-  height: 100%;
-  padding: 3em;
-  background-color: #ffdc52;
-  color: #000;
-}
-
-.fs-cc-prefs2_label {
-  margin-top: 0px;
-  margin-right: 2em;
-  margin-bottom: 0px;
-  color: #231f20;
-  font-size: 1.4em;
-  font-weight: 400;
-}
-
-.fs-cc-prefs2_title {
-  color: #231f20;
-  font-size: 2.2em;
-  line-height: 1.2em;
-  font-weight: 400;
-  text-align: center;
-}
-
-.fs-cc-prefs2_checkbox {
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  margin-top: 0px;
-  margin-left: 0px;
-  background-color: #fff;
-  cursor: pointer;
-}
-
-.fs-cc-prefs2_checkbox.w--redirected-checked {
-  border-color: #0540f2;
-  background-color: #231f20;
-  background-size: auto;
-  color: #ffdc52;
-}
-
-.fs-cc-preferences2_close-icon {
-  width: 24px;
-  height: 24px;
-  color: #ffdc52;
-}
-
-.fs-cc-prefs2_button {
-  padding: 1em;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #231f20;
-  border-radius: 100vw;
-  background-color: #231f20;
-  color: #ffdc52;
-  font-size: 1.04em;
-  font-weight: 400;
-  text-align: center;
-}
-
-.fs-cc-prefs2_button.fs-cc-button-alt {
-  margin-bottom: 1em;
-  border-color: #231f20;
-  border-radius: 100vw;
-  background-color: transparent;
-  color: #231f20;
-  font-size: 1.04em;
-  font-weight: 400;
-}
-
-.fs-cc-prefs2_form-wrapper {
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 0px;
-  padding: 30px;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.text-block-33 {
-  font-size: 1.04em;
-}
-
-.fs-cc-prefs2_checkbox-label {
-  display: none;
-}
-
-.fs-cc-prefs2_close {
-  position: absolute;
-  left: auto;
-  top: 0px;
-  right: 0px;
-  bottom: auto;
-  padding: 0.7em;
-  background-color: #231f20;
-  box-shadow: -1px 1px 4px 0 rgba(51, 51, 51, 0.1);
-  color: #fff;
-  font-size: 20px;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.fs-cc-banner2_buttons-wrapper {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 1.2em;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  grid-auto-columns: 1fr;
-  -ms-grid-columns: auto auto;
-  grid-template-columns: auto auto;
-  -ms-grid-rows: auto;
-  grid-template-rows: auto;
-}
-
-.fs-cc-banner2_text-link {
-  border-bottom: 2px solid #ffdc52;
-  color: #ffdc52;
-  font-weight: 400;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.fs-cc-prefs2_toggle-wrapper {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.w-layout-grid {
-  display: -ms-grid;
-  display: grid;
-  grid-auto-columns: 1fr;
-  -ms-grid-columns: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: auto auto;
-  grid-template-rows: auto auto;
-  grid-row-gap: 16px;
-  grid-column-gap: 16px;
-}
-
-
-
-
-
+/**/
 
 /*
 ================================================================================
