--- a/app.css
+++ b/app.css
@@ -2726,11 +2726,11 @@ STATIC IMAGE ZA MAPU
   top: 0.55em;
   right: 0.85em;
   }
-  .control-me::after {  
+  .togpapa .control-me::after {  
       content: "A — Z";
       font-size: 1.04em—;
   }
-  #toggle:checked ~ .control-me::after {
+  .togpapa #toggle:checked ~ .control-me::after {
       content: "Z — A";
   }
  .togpapa label {
