--- a/app.css
+++ b/app.css
@@ -1133,7 +1133,7 @@ border-radius: 50%;
 .filepond--drop-label.filepond--drop-label label {
   display: block;
   margin: 0;
-  padding: .5em 0.5em 1.5em 2.5em!important;
+  padding: 1.1em 0.5em 0.5em 0.5em!important;
 /*   padding: 0.5em;  *//* use padding instead of margin so click area is not impacted */
 
   /* padding: 1.75em 0.5em 0.5em 0.5em!important; */
