--- a/app.css
+++ b/app.css
@@ -2740,7 +2740,7 @@ STATIC IMAGE ZA MAPU
   top:0;
   width:100%;
       background: transparent;
-      padding: .5em 0.5em 1.5em 2.5em!important;
+      padding: .5em 0.5em 1.5em 2.5em;
       cursor: pointer;
      }
   .visually-hidden {
