--- a/app.css
+++ b/app.css
@@ -62,10 +62,10 @@ KILL OUTLINE ON ALL
 ================================================================================
 */
 
-/* *:focus {
+*:focus {
   outline: none;
 }
- */
+
 
 /*
 ================================================================================
