--- a/app.css
+++ b/app.css
@@ -918,7 +918,7 @@ user-select:none;
 }
 
 .filepond--drop-label.filepond--drop-label label {
-  padding: 1.75em 0.5em 0.5em 0.5em!important;
+ /*  padding: 1.75em 0.5em 0.5em 0.5em!important; */
   width: 100%!important;
 }
 
