--- a/app.css
+++ b/app.css
@@ -605,6 +605,12 @@ MAPBOX
   pointer-events: auto;
   }
 
+  .mapboxgl-popup-content a {
+    font-size: 1.41em!important;
+    margin-bottom: 0.25em;
+    line-height: 1.1;
+
+}
 
   .mapboxgl-popup-content h3 {
     font-size: 1.41em!important;
@@ -614,7 +620,7 @@ MAPBOX
 }
   
 .mapboxgl-popup-content p {
-   text-transform: uppercase!important;
+    text-transform: uppercase!important;
 }
 
 .mapboxgl-popup-tip {
