--- a/app.css
+++ b/app.css
@@ -2855,3 +2855,11 @@ max-width:100%
  }
 
     }
+
+/* LAPTOP FONT SIZE*/
+
+@media only screen and (min-width: 992px) and (max-width: 1440px)  {
+     body {
+       font-size: 15.98px;
+      }
+}
