--- a/app.css
+++ b/app.css
@@ -2862,4 +2862,51 @@ max-width:100%
      body {
        font-size: 15.98px;
       }
+
+      .parax {
+        max-width: 42ch;
+    }
+    .paray {
+      max-width: 39ch;
+  }
+  
+  .acc--txt {
+    max-width: 35ch;
+}
+  
+#w-node-f76dfbbb-3ff6-caca-98bc-8f9576ea3cc3-bfb8b406 {
+  -ms-grid-column-span: 4;
+  grid-column-end: 7;
+
+}
+
+#w-node-b59f27e9-0cc0-3c75-c49f-fc3bfa1efa8a-bfb8b406 {
+  -ms-grid-column-span: 4;
+  grid-column-end: 7;
+  max-width: 38ch;
+}
+
+.grid.is--lokacije__left {
+  font-size: 0.98vw;
+}
+
+.splide {
+  height: 40em;
+}
+
+.back--location {
+  top: 6.4em;
+  padding-left: 2em;
+
+}
+
+.article {
+  width: 19em;
+}
+
+.filepond--root {
+
+  height: 2em!important;
+
+}
 }
